# soniox-converter

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Install Soniox Converter.command  PremierePro_transcript_format_spec.json  README.md  Soniox Converter.command  _launch_gui.py  docker-compose.yml  format_captions.py  format_captions_llm_documentation.md  install.sh  pyproject.toml  script.rtf  soniox-converter-prd.md  soniox_async_api_reference.md  supervisord.conf
format_captions/: __init__.py  __main__.py  cli.py  core.py  models.py  presets.py
soniox_converter/: __init__.py  __main__.py  cli.py  config.py  gui.py
soniox_converter/adapters/: __init__.py  caption_adapter.py
soniox_converter/api/: __init__.py  client.py  models.py
soniox_converter/core/: __init__.py  assembler.py  context.py  ir.py
soniox_converter/formatters/: __init__.py  base.py  kinetic_words.py  plain_text.py  premiere_pro.py  srt_captions.py
soniox_converter/server/: __init__.py  app.py  jobs.py  models.py
soniox_converter/slack/: __init__.py  __main__.py  bot.py  messages.py
test-assets/: SOME_260213_melodifestivalen_lowq-script.txt  SOME_260213_melodifestivalen_lowq-terms.txt
tests/: conftest.py  test_api.py  test_assembler.py  test_caption_library.py  test_caption_tuning.py  test_context.py  test_e2e.py  test_formatters.py  test_jobs.py  test_slack_bot.py
tests/fixtures/caption_tuning/: BROADCAST_EVALUATION_REPORT.md  BROADCAST_TUNING_SUMMARY.md  COMPARISON_SUMMARY.md  presets.py
tests/fixtures/caption_tuning/real_transcripts/: long_sentences.json  medium_sentences.json  mixed_complexity.json  short_sentences.json  (+1 more)
tests/tools/: README_BROADCAST_TUNING.md  tune_broadcast_captions.py  tune_social_captions.py
(+16 files in other folders)
