[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soniox-converter"
version = "0.1.0"
description = "Soniox ASR transcript converter — produces Premiere Pro JSON, SRT captions, kinetic word reveal, and plain text from Soniox async API output."
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "python-dotenv>=0.19",
    "jsonschema>=4.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.5",
    "slack-bolt>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
soniox-api = "soniox_converter.server.app:run_api"
soniox-slack = "soniox_converter.slack.bot:main"

[tool.setuptools.packages.find]
include = ["soniox_converter*", "format_captions*"]

[tool.setuptools.package-data]
"soniox_converter.formatters" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
